matching tags and header, dinner images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CT Velo Racing</title>
+    <title>Charlie Taylor - UK time trial cyclist</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">CT Velo Racing</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Charlie Taylor - UK time trial cyclist</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -280,6 +280,36 @@
                                 </div>
                                 <div class="project-name">
                                     If you know where this photo was taken,<br>please tell us!
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/gallery/RTTC_comp_record.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    
+                                </div>
+                                <div class="project-name">
+                                    Charlie recieving the award for the 100 mile competition record.
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/gallery/SPRC_dinner.jpg" class="portfolio-box">
+                        <img src="img/gallery/SPRC_dinner_thumb.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    
+                                </div>
+                                <div class="project-name">
+                                    Charlie recieving his 2015 haul of South Pennine prizes.
                                 </div>
                             </div>
                         </div>
