--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About</h2>
                     <hr class="primary">
-                    <p class="text-muted">Charlie has been racing since 2000 for the <a href="http://southpennineroadclub.org.uk" target=_blank>South Pennine Road Club</a>. He's primarily a cyclist, but when he's not on his bike you can find him working as a mechanical engineer, climbing or hill walking. He's a husband and father of two girls, with an insatiable passion for all things outdoors. Charlie is based in south Derbyshire.
+                    <p class="text-muted">Charlie races for <a href="http://www.giant-bicycles.com/en-gb/teamsriders/team/team.bottrill/124/" target=_blank>Team Bottrill</a>, but began his career in 2000 with the <a href="http://southpennineroadclub.org.uk" target=_blank>South Pennine Road Club</a>. He's primarily a cyclist, but when he's not on his bike you can find him working as a mechanical engineer, climbing or hill walking. He's a husband and father of two girls, with an insatiable passion for all things outdoors. Charlie is based in south Derbyshire.
                     </p>
                     <p class="text-muted">Charlie's competition highlights include:
                     <ul class="text-muted">
                         <li>2014 and 2015 National 100 mile TT champion</li>
-                        <li>Fastest 100 mile TT ever (3:21:31, 29.78 mph)</li>
+                        <li>100 mile TT record holder (3:21:31, 29.78 mph)</li>
                         <li>8 Open TT wins in 2015</li>
                     </ul>
                     </p>
@@ -345,7 +345,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>Copyright &copy; CTVeloRacing.com 2015</p>
+                    <p>Copyright &copy; CTVeloRacing.com 2016</p>
                 </div>
             </div>
         </div>
